dodano komendę git status

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
         <td>git init</td>
         <td>Inicjalizacja repozytorium</td>
     </tr>
-    <tr></tr>
+    <tr>
+        <td>git status</td>
+        <td>Informacja o repozytorium</td>
+    </tr>
   </table>
 </body>
 </html>
